Fix spacing

--- a/css/style.css
+++ b/css/style.css
@@ -129,6 +129,8 @@ nav {
     background-color: #1e293b;
     border: #334155 solid 1px;
     border-top: 0px;
+    border-left: 0px;
+    border-right: 0px;
     justify-content: space-around;
 
     padding: .5rem;
